--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@ body {
 }
 
 img {
+  width: 100%;
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
@@ -15,6 +17,8 @@ img {
   bottom: 0;
   z-index: -50;
   -webkit-user-drag: none;
+
+  object-fit: cover;
 }
 
 #login-form {
