--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
 .hidden {
   display: none;
   opacity: 0;
+  z-index: -10;
 }
 
 img {
@@ -59,21 +60,25 @@ img {
 }
 
 #todo-form {
-  display: inline;
+  display: block;
   color: white;
   text-align: center;
   font-size: 25px;
-
   position: absolute;
-  bottom: 25%;
-  width: 500px;
+
+  width: 100%;
   left: 50%;
-  margin-left: -250px;
+  margin-left: -50%;
+  bottom: 20%;
+  top: 20%;
 }
 
 #todo-form input {
   width: 300px;
   height: 30px;
+
+  display: inline-block;
+
   border-top: none;
   border-left: none;
   border-right: none;
@@ -85,6 +90,12 @@ img {
   font-size: 20px;
 
   outline: none;
+
+  margin-bottom: 1%;
+}
+
+#todo-form p {
+  font-weight: bold;
 }
 
 #todo-list {
@@ -93,14 +104,9 @@ img {
   list-style: none;
   padding-left: 0;
   text-align: center;
+  width: 100%;
 
-  height: 70px;
-  width: 300px;
-  display: inline;
-  position: absolute;
-  left: 50%;
-  margin-left: -140px;
-  bottom: 13%;
+  min-height: 150px;
 }
 
 #todo-list button {
@@ -116,36 +122,24 @@ img {
 
 #clock {
   color: white;
-  position: absolute;
-  left: 50%;
-  margin-left: -300px;
-  top: 20%;
-
-  font-size: 150px;
+  margin-bottom: 1%;
+  font-size: 130px;
 }
 
 #greeting {
   color: white;
-  position: absolute;
-  width: 600px;
-  left: 50%;
-  margin-left: -300px;
-  top: 50%;
 
   text-align: center;
   font-size: 45px;
+
+  margin-bottom: 2%;
 }
 
 #quote {
-  color: rgba(255, 255, 255, 0.8);
-  width: 1000px;
-  position: absolute;
-  bottom: 5%;
-  left: 50%;
-  margin-left: -500px;
-
+  color: rgba(255, 255, 255, 0.5) !important;
+  font-style: italic;
   text-align: center;
-  font-size: 20px;
+  font-size: 17px !important;
 }
 
 #weather {
